--- a/views/show.ejs
+++ b/views/show.ejs
@@ -19,5 +19,7 @@
     <h4> SPECIAL ATTACK: <%= data.stats.spattack %></h4>
     <h4> SPECIAL DEFENSE: <%= data.stats.spdefense %></h4>
     <h4> SPEED: <%= data.stats.speed %></h4>
+    <a href="/pokemon">Back to PokeDex Index</a>
+
 </body>
 </html>
