--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,20 +7,30 @@
     <title>Pokemon data</title>
 </head>
 <body>
-    <h1> Pokemon Data</h1>
+    <h1> PokeDex </h1>
+    <nav>
+        <a href="/pokemon/new">Create a New Pokemon</a>
+      </nav>
     <ul>
         <% for (let i = 0; i < data.length; i++) { %>  
           <li>
               <a href="/pokemon/<%= i %>">
               <%= data[i].name %>
               </a>
-             <img src=" <%= data[i].img %>""
+             <img src="<%= data[i].img %>""
+
+             <form action="/fruits/<%=i; %>?_method=DELETE" method="POST">
+                <input type="submit" value="DELETE" />
+              </form>
           </li> 
           
       
       
       <% } %>
       </ul>
+    <style>
     
+        
+    </style>
 </body>
 </html>
