--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: rgb(249, 132, 108);
+        } 
+    </style>
+
     <h1>Pokemon</h1>
     <h2><%= data.name %></h2>
     <% let code = '.jpg' %>
