--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,16 +7,31 @@
     <title>Create A New Fruit</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: rgb(249, 132, 108);
+        } 
+    </style>
     <h1>New Pokemon Page</h1>
     <form action="/pokemon" method="POST">
         Name: <input type="text" name="name" /><br />
+
         Type: <input type="text" name="type" /><br />
+
         HP: <input type="text" name="stats.hp" /><br />
+
         ATTACK : <input type="text" name="stats.attack" /><br />
+
         DEFENSE : <input type="text" name="stats.defense" /><br />
+
         SPECIAL ATTACK: <input type="stats.spattack" name="type" /><br />
+
         SPEED: <input type="stats.speed" name="type" /><br />
         <input type="submit" name="" value="Submit Changes" />
+
+        
       </form>
+
+      <a href="/pokemon">Back to PokeDex Index</a>
 </body>
 </html>
